--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,6 +30,8 @@ layout: base
     {{ content }}
   </div>
 
+  <script async src="https://comments.app/js/widget.js?3" data-comments-app-website="td2djZAl" data-limit="5"></script>
+
   {%- if site.disqus.shortname -%}
     {%- include disqus_comments.html -%}
   {%- endif -%}
