--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,4 +11,6 @@ layout: base
     {{ content }}
   </div>
 
+    <script async src="https://comments.app/js/widget.js?3" data-comments-app-website="td2djZAl" data-limit="5"></script>
+
 </article>
